Adding markdowns and comments to enhance readability

--- a/Content_based_filtering.ipynb
+++ b/Content_based_filtering.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preparing Environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -10,11 +17,16 @@
     "import numpy as np \n",
     "from sklearn.metrics.pairwise import euclidean_distances\n",
     "from sklearn.metrics import root_mean_squared_error\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reading files and checking records' details"
    ]
   },
   {
@@ -65,6 +77,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pivoting dataframes to compare preferences"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -93,6 +112,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Recommender\n",
+    "Using euclidean distance instead of cosine similarity as it's suitable for numerical data where the magnitude of differences matters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -101,7 +128,7 @@
     "def generate_recommendations(user_id):\n",
     "\n",
     "    user_preferences = users_df.loc[user_id]\n",
-    "    similarity_scores = 1 - euclidean_distances(workspaces_df, [user_preferences])\n",
+    "    similarity_scores = 1 - euclidean_distances(workspaces_df, [user_preferences]) # Subtracted from 1 to calculate similarities\n",
     "\n",
     "    top_workspaces = pd.DataFrame({\n",
     "    \"workspace_id\": workspaces_df.index.values.reshape(-1),\n",
@@ -109,6 +136,14 @@
     "    }).sort_values(by='sim_score',ascending=False)\n",
     "\n",
     "    return top_workspaces, user_preferences\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Validating Function\n",
+    "Using RMSE because it's more interpretable than MSE as it's expressed in the same units as the target variable."
    ]
   },
   {
@@ -129,6 +164,13 @@
     "            print(f'Recommendation number {i+1} is valid')\n",
     "        else:\n",
     "            print(f'Recommendation number {i+1} is NOT valid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST"
    ]
   },
   {
